--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,7 +39,8 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "underscore": "^1.13.1"
   },
   "scripts": {
     "start": "craco start",
@@ -75,6 +76,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.1",
     "@types/tailwindcss": "^2.2.1",
+    "@types/underscore": "^1.11.4",
     "autoprefixer": "^9",
     "husky": "^7.0.4",
     "postcss": "^7",
